coms added