@@ -2,7 +2,6 @@ package com.example.carrentalapp;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.Alert;
 import javafx.scene.control.ChoiceBox;
@@ -16,7 +15,11 @@ import java.time.LocalDate;
 import java.util.List;
 import java.util.Objects;
 
+/**
+ * Controller class for handling actions and initialization of the rented car details modal.
+ */
 public class RentedCarDetailsModalController {
+
     @FXML
     private DatePicker rentedDateDatePicker;
 
@@ -34,37 +37,41 @@ public class RentedCarDetailsModalController {
 
     private Stage stage;
 
-    RentedCar rentedCar;
+    private RentedCar rentedCar;
 
+    /**
+     * Sets the stage for this controller.
+     *
+     * @param stage The stage to set.
+     */
     public void setStage(Stage stage) {
         this.stage = stage;
     }
 
-    @FXML
-    private void initialize() {
-        // Default initialization if needed
-    }
-
+    /**
+     * Initializes the controller with the details of the rented car.
+     *
+     * @param rentedCar The rented car entity to display and edit.
+     */
     public void setRentedCar(RentedCar rentedCar) {
         this.rentedCar = rentedCar;
         if (rentedCar != null) {
             ObservableList<Car> cars = FXCollections.observableArrayList();
-
             carChoiceBox.setItems(cars);
+
             ObservableList<String> clientNames = FXCollections.observableArrayList();
             for (Object client : ClientsController.getClients()) {
                 Client temp = (Client) client;
-                clientNames.add(temp.getId() + " " + temp.getFirstname() + " " + temp.getLastname()  + " " + temp.getEmail());
+                clientNames.add(temp.getId() + " " + temp.getFirstname() + " " + temp.getLastname() + " " + temp.getEmail());
             }
             clientChoiceBox.setItems(clientNames);
-            clientChoiceBox.setItems(clientNames);
+
             rentedDateDatePicker.setValue(LocalDate.parse(rentedCar.getRentedDate()));
             rentedFromDatePicker.setValue(LocalDate.parse(rentedCar.getRentedFrom()));
             rentedUntilDatePicker.setValue(LocalDate.parse(rentedCar.getRentedUntil()));
 
             for (int i = 0; i < ClientsController.getClients().size(); i++) {
-                System.out.println(ClientsController.getClients().get(i));
-                if(Objects.equals(ClientsController.getClients().get(i).toString().split(" ")[0], rentedCar.getClient().getId().toString())){
+                if (Objects.equals(ClientsController.getClients().get(i).toString().split(" ")[0], rentedCar.getClient().getId().toString())) {
                     clientChoiceBox.getSelectionModel().select(i);
                     break;
                 }
@@ -74,15 +81,17 @@ public class RentedCarDetailsModalController {
                 String hql = "from Car c join fetch c.engine where c.id = " + rentedCar.getCar().getId();
                 Query<Car> query = session.createQuery(hql, Car.class);
                 List<Car> resultList = query.getResultList();
-                cars.add(resultList.getFirst());
+                cars.add(resultList.get(0)); // Assuming only one car is fetched
             }
             cars.addAll(AvailableCarsController.getCars());
-            carChoiceBox.getSelectionModel().select(0);
+            carChoiceBox.getSelectionModel().select(0); // Select the first car
         }
     }
 
-
-
+    /**
+     * Handles the action when the save button is clicked.
+     * Updates the rented car details in the database.
+     */
     public void handleSaveButtonAction() {
         String rentedDate = getRentedDate();
         String rentedFromDate = getRentedFrom();
@@ -117,7 +126,10 @@ public class RentedCarDetailsModalController {
         stage.close();
     }
 
-
+    /**
+     * Handles the action when the delete button is clicked.
+     * Deletes the rented car details from the database.
+     */
     public void handleDeleteButtonAction() {
         try (Session session = HibernateUtil.getSessionFactory().openSession()) {
             Transaction transaction = session.beginTransaction();
@@ -132,10 +144,22 @@ public class RentedCarDetailsModalController {
         stage.close();
     }
 
+    /**
+     * Handles the action when the cancel button is clicked.
+     * Closes the modal window.
+     */
     public void handleCancelButtonAction() {
         stage.close();
     }
-    private void showAlert(Alert.AlertType alertType,String title, String message) {
+
+    /**
+     * Displays an alert dialog with the specified type, title, and message.
+     *
+     * @param alertType The type of the alert (e.g., ERROR, INFORMATION).
+     * @param title     The title of the alert.
+     * @param message   The message to display in the alert.
+     */
+    private void showAlert(Alert.AlertType alertType, String title, String message) {
         Alert alert = new Alert(alertType);
         alert.setTitle(title);
         alert.setHeaderText(null);
@@ -143,25 +167,40 @@ public class RentedCarDetailsModalController {
         alert.showAndWait();
     }
 
+    /**
+     * Retrieves the rented date from the date picker.
+     *
+     * @return The rented date as a string.
+     */
     public String getRentedDate() {
         LocalDate x = rentedDateDatePicker.getValue();
-        if(x == null) {
+        if (x == null) {
             return "";
         }
         return x.toString();
     }
 
+    /**
+     * Retrieves the rented from date from the date picker.
+     *
+     * @return The rented from date as a string.
+     */
     public String getRentedFrom() {
         LocalDate x = rentedFromDatePicker.getValue();
-        if(x == null) {
+        if (x == null) {
             return "";
         }
         return x.toString();
     }
 
+    /**
+     * Retrieves the rented until date from the date picker.
+     *
+     * @return The rented until date as a string.
+     */
     public String getRentedUntil() {
         LocalDate x = rentedUntilDatePicker.getValue();
-        if(x == null) {
+        if (x == null) {
             return "";
         }
         return x.toString();
